添加zookeeper客户端单例实现

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,5 @@
 rootProject.name = 'learning-cumquat'
 include 'learning-cumquat-curator'
+include 'learning-cumquat-dynconfig'
+include 'learning-cumquat-zookeeper'
 
