--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'learning-cumquat'
 include 'learning-cumquat-curator'
 include 'learning-cumquat-dynconfig'
 include 'learning-cumquat-zookeeper'
+include 'learning-cumquat-spring-zkconfig'
+include 'learning-cumquat-spring-zkconfig'
 
