--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 
-version '0.1'
+version '0.0.1'
 
 apply plugin: 'java'
-
+apply from: 'dependencies.gradle'
 sourceCompatibility = 1.7
 
 /*全局配置*/
@@ -12,6 +12,7 @@ allprojects {
     version '0.0.1'
     /*自带插件*/
     apply plugin: 'java'
+    apply plugin: 'maven'
     /*1.7环境*/
     sourceCompatibility = 1.7
     targetCompatibility = 1.7
@@ -36,9 +37,32 @@ subprojects {
 
         compile 'org.slf4j:slf4j-api:1.7.21'
         compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.2'
-        testCompile group: 'junit', name: 'junit', version: '4.11'
-        // 加载libs目录下所有的jar
         compile fileTree(dir: 'libs', include: ['*.jar'])
+
+        testCompile "junit:junit:$junitVersion"
+        testCompile "org.springframework:spring-test:$springframworkVersion"
+    }
+
+    //生成源码jar
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier = 'sources'
+        from sourceSets.main.allSource
+
+
+    }
+
+    artifacts {
+        archives jar
+        archives sourcesJar
+    }
+
+    //发布到Maven本地仓库
+    uploadArchives {
+        repositories {
+            mavenDeployer {
+                repository(url: "$localMavenRepository")
+            }
+        }
     }
 
 }
