新增应用上下文统一管理应用信息和zk连接信息

--- a/learning-cumquat-test/src/main/resources/config/main-conf.properties
+++ b/learning-cumquat-test/src/main/resources/config/main-conf.properties
@@ -1,6 +1,10 @@
+#app所属的应用
 product=learning
+#app的code，唯一标识
 app=cumquat
+#app的名称
 appName=learning-cumquat
+#backupDir=
 #zk.ip=192.168.17.45
 zk.ip=192.168.230.128
 zk.port=2181
