添加分布式锁测试用例

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'learning-cumquat-dynconfig'
 include 'learning-cumquat-zookeeper'
 include 'learning-cumquat-spring-zkconfig'
 include 'learning-cumquat-test'
+include 'learning-cumquat-curator'
 
